--- a/drivers/net/Makefile
+++ b/drivers/net/Makefile
@@ -285,3 +285,4 @@ obj-$(CONFIG_VIRTIO_NET) += virtio_net.o
 obj-$(CONFIG_SFC) += sfc/
 
 obj-$(CONFIG_WIMAX) += wimax/
+obj-$(CONFIG_NTB_NETDEV) += ntb_netdev.o
