--- a/drivers/ntb/Makefile
+++ b/drivers/ntb/Makefile
@@ -1,3 +1,5 @@
 obj-$(CONFIG_NTB) += ntb.o
+obj-$(CONFIG_NTB_XEON) += ntb_xeon.o
+obj-$(CONFIG_NTB_ATOM) += ntb_atom.o
 
 ntb-objs := ntb_hw.o ntb_transport.o
